syntax = "proto3";

package sortedtest;

option go_package = "sortedstartup/otel/proto";

service sortedtest {
    rpc test(testRequest) returns (testResponse);
}

message testRequest {
  string message = 1;
  string chat_id = 2;
}

message testResponse {
    string text = 1;
}